2015-06-02  Per Bothner  <per@bothner.com>

	* QuoteExp.java (makeShared): Make public.

2015-05-29  Per Bothner  <per@bothner.com>

	* Declaration.java (load): Call fixUnsigned to correct loading
	from unsigned byte or short fields, by masking.
	* ConsumerTarget.java (compileFromStack): Revert previous change.
	No longer needed, thanks to above change.
	* StackTarget.java (compileFromStack0): Add casts to call
	to emitConvert, which now requires PrimType arguments.

2015-05-20  Per Bothner  <per@bothner.com>

	* ConsumerTarget.java (compileFromStack): Handle unsigned
	integer types in a reasonable manner.

	* InlineCalls.java (visitQuoteExp): Use new method
	LangPrimType.convertIntegerLiteral.

2015-05-18  Per Bothner  <per@bothner.com>

	* ModuleMethod.java (resolveParameterTypes): Check and possibly use
	SourceMethodType annotation.
	* PrimProcedure (decodeType): Make public.

2015-05-15  Per Bothner  <per@bothner.com>

	* CaseExp.java (compile): Simplify label handling.

2015-05-14  Per Bothner  <per@bothner.com>

	* ApplyExp.java (compile): If doing a tail-call to an inlined function,
	defer the call until we're at the end of the calling scope.
	See comment in testsuite/inline4.scm.
	* LambdaExp.java (pendingInlined): Queue of deferred inline calls.
	(compileEnd): Process pendingInlines queue.
	(alloChildClass): Define thisVariable in parameter_scope.
	* ClassExp.java (compileMembers): Don't call declareThis yet.
	* ScopeExp.java (scope): Make protected rather than private.

2015-05-09  Per Bothner  <per@bothner.com>

	* PushApply.java: Add can-finish checking for block-exit.
	(visitBlockExp, visitExitExp): New methods.
	(CanFinishTracker.associatedExpression): New field.

2015-05-05  Per Bothner  <per@bothner.com>

	* NameLookup.java (getInstance, setInstance): Don't implement
	lookup by using a "magic" binding in the Environmement (which may
	fail if the Environment is locked).
	Instead use a static WeakIdentityHashMap.
