@@ -553,7 +553,8 @@ inlining.log: InliningTest.class cycle1.class cycle2.class \
 	factorialInfer1 getFromVector1 getFromVector2 read1 stringForEach \
 	stringAppend translateSpaceToNewline \
 	topLevelRecurse1 topLevelRecurse2 sum1 sum2 numcomp eqv raise \
-	case callWithValues mmemq greaterEqual >inlining.log
+	case callWithValues mmemq greaterEqual \
+	incrementS8a incrementArrS8 >inlining.log
 	$(LIST_CODE_SIZE) cycle1.class isIsEven >>inlining.log
 	$(LIST_CODE_SIZE) cycle2.class isIsOdd >>inlining.log
 	$(LIST_CODE_SIZE) binarytrees.class bottomUpTree test >>inlining.log
