@@ -1,3 +1,9 @@
+2015-06-03  Per Bothner  <per@bothner.com>
+
+	* inlining-test.scm (increment-s8a, increment-arr-s8): New functions.
+	* Makefile.am: Update accordingly.
+	* inlining.expected: Update accordingly.
+
 2015-06-02  Per Bothner  <per@bothner.com>
 
 	* num-test.scm: Add some tests for primitive unsigned comparison.
